@@ -1,2 +1,2 @@
 if {![package vsatisfies [package provide Tcl] 8.2]} {return}
-package ifneeded htmlparse 1.1.2 [list source [file join $dir htmlparse.tcl]]
+package ifneeded htmlparse 1.1.3 [list source [file join $dir htmlparse.tcl]]
