@@ -1,3 +1,10 @@
+2008-07-28  Andreas Kupries  <andreask@activestate.com>
+
+	* htmlparse.tcl (mapEscapes): Extended to handle the XHML/XML
+	* htmlparse.test: entity apos (apostrophe). Extended the
+	* htmlparse.man: testsuite. This fixes [Bug 2028993]. Bumped
+	* pkgIndex.tcl: package version to 1.1.3.
+
 2008-06-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
 	* htmlparse.pcx: New file. Syntax definitions for the public
